# ai_develop_sop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ai_project_quickstart.md  ai_project_sop.md  ai_project_type.md  ai_runtime_sop.md  ai_runtime_standards.md  ai_sop_clear.bat  ai_sop_clear.ps1  ai_sop_init.bat  ai_sop_init.ps1  fact_writeback_sop.md  main_plan_state_design.md  maintenance_recovery_sop.md  next_phase_request_template.md  phase_layer.md  phase_review_template.md  plan_item_template.md  plan_layer.md  project_bootstrap_sop.md  project_entry.md  project_init_artifacts.md  project_layer.md  pyproject.toml  skill_policy.md  skill_registry.md  skill_template.md  task_execution_sop.md  task_layer.md  task_template.md  workflow_transition_rules.md
.cursor/rules/: boundaries.mdc  workflow.mdc  writeback.mdc
.dev_sop/: README.md  VERSION.md
.dev_sop/control/: CURRENT.md  DOC_MAP.md
.dev_sop/project-facts/: README.md
facts/: README.md  facts_index.md  golden_cases.md  project_scope.md  repository-model.md  sop-maintenance-rules.md
product/: README.md  VERSION.md
rules/: boundaries_rules.md  scope_control_rules.md  validation_rules.md  workflow_rules.md  writeback_rules.md
runtime/: README.md
scripts/: install-dev-sop.bat  packaged-AGENTS.md  packaged-CLAUDE.md  sync_packaged_assets.py  uninstall-dev-sop.bat
skills/: skill_policy.md  skill_registry.md  skill_template.md
standards/: document_routing_matrix.md  document_writing_conventions.md  naming_conventions.md  path_conventions.md  standards_index.md
tests/: test_starter.py
(+115 files in other folders)
