[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-develop-sop"
version = "1.1.3"
description = "Pip-installable CLI for initializing and updating the AI Engineering SOP starter"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
dev-sop = "dev_sop_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dev_sop_cli = ["assets/starter/**/*"]
